Fixed Layout on mobile + Markee package

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
   @font-face {
-    font-family: "Bauziet Norm Bold";
+    font-family: "Bauziet";
     src: url("/fonts/Bauziet-Norm-Bold.woff2") format("woff2"),
       url("/fonts/BauzietNormBold.woff") format("woff");
     font-weight: normal;
